audio working w/limits

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 	<html ng-app="master">
 	
 	<head>
@@ -28,14 +28,29 @@
 		<h3  class ="animated fadeInRight" id = "noFuss"> No Sign Up. No Fuss.<br> Discover Bands Playing in Your City Tonight.</h3>
 		<h1>{{greeting}}</h1>
 		
-<!-- 		<a class = 'test' href = "http://api.bandsintown.com/events/search.json?location=Denver,CO&date=2015-11-25,2015-11-25&app_id=tonightInApp"> Denver</a>
+	<a class = 'test' href = "http://api.bandsintown.com/events/search.json?location=Denver,CO&date=2015-11-25,2015-11-25&app_id=tonightInApp"> Denver</a>
  !-->
 		
 
-	</div>
+	<!-- </div> -->
 		
-	<script src = "/javascripts/main.js"></script>
+	<!-- // <script src = "/javascripts/main.js"></script> -->
 
+<!-- </body> -->
+
+<!-- </html>  -->
+
+
+<!DOCTYPE html>
+<html ng-app="master">
+<head>
+	<title>Hello</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js" type="text/javascript"></script>
+</head>
+<body ng-controller="authController">
+	
+	<h1>Hey there {{user.username}}!</h1>
+
+	<script src="/javascripts/main.js" type="text/javascript"></script>
 </body>
-
 </html>
