--- a/public/html/submit.html
+++ b/public/html/submit.html
@@ -13,33 +13,52 @@
 
 	<body ng-controller="submitController">
 
-	<audio autoplay>
-  <source ng-model="testicles" src="./music/cheer.mp3" type="audio/mpeg">
-		</audio>
+	<!-- <audio controls>
+  <source src="/music/hgc.mp3" type="audio/mpeg">
+		</audio> -->
 
 	<h3>{{greeting}}</h3>
 
-		<div>
+		<div class = "addArtist">
 
 				<form  ng-submit="createArtist()">
-				<input ng-model="newArtist.name" placeholder="Artist Name">
-				<input ng-model="newArtist.bio"   placeholder="Bio">
-				<input ng-model="newArtist.songName" placeholder="Song Name">
-				<input fileread="newArtist.song" type="file" >
-	
-				<input type="submit">
+					<input ng-model="newArtist.name" placeholder="Artist Name">
+					<input ng-model="newArtist.bio"   placeholder="Bio">
+					<input ng-model="newArtist.songName" placeholder="Song Name"> <br>
+					<div class ="uploadAudio">
+						<p> Upload Audio</p>
+						<input fileread="newArtist.song" type="file" accept="audio/*">
+					</div>
+					<input type="submit">
 
+				</form>
 		</div>
 
+			<div class = "addShow">
+
+			<h1> Add a new concert</h1> <br> 
+				<form ng-submit="createShow()">
+					<input ng-model="newShow.date"  placeholder="Date">
+					<input ng-model="newShow.Venue" placeholder="Venue"> 
+					<input ng-model="newShow.city"  placeholder="City">
+					<input ng-model="newShow.state"  placeholder="State">
+					<input type="submit">
+				</form>
+
+		</div>
+		
+
 				<ul ng-show = 'artists'>
-					<li>
+					
 		
 		<div ng-repeat="data in artists track by $index">
  					<h1>{{data.name}}</h1>
-					
 					<h3>{{data.bio}}</h3>
 					<h5>{{data.songName}}</h5>
-		</div>
+					<audio controls>
+  						<source src="{{$sce.trustAsResourceUrl(data.song)}}" type="audio/mpeg">
+					</audio>
+		</div
 
 	</li>
 </ul>				
