--- a/public/html/showInfo.html
+++ b/public/html/showInfo.html
@@ -28,7 +28,7 @@
 		
 		<div id = "tourRedirect">
 
-		<a  href="/tours" class="btn btn-success btn-lg">Playing Tonight in Your City</a>
+		<a  href="/tours" class="btn btn-success btn-lg">Tours</a>
 
 		</div>
 		
