--- a/public/html/submit.html
+++ b/public/html/submit.html
@@ -27,7 +27,7 @@
 					<input ng-model="newArtist.songName" placeholder="Song Name"> <br>
 					<div class ="uploadAudio">
 						<p> Upload Audio</p>
-						<input fileread="newArtist.song" type="file" accept="audio/*">
+						<input class ="choose" fileread="newArtist.song" type="file" accept="audio/*">
 					</div>
 					<input type="submit">
 
