--- a/public/html/submit.html
+++ b/public/html/submit.html
@@ -45,7 +45,7 @@
 
 	</li>
 </ul>				
-	
+		<a href="/showInfo" class="btn btn-success btn-lg">Add Show</a>
 		</div>
 
 		<!-- 	<div ng-controller = "showController" class = "addShow">
