--- a/public/html/showInfo.html
+++ b/public/html/showInfo.html
@@ -19,7 +19,7 @@
 				<form ng-submit="createShow()">
 					
 					<div class ="uploadAudio">
-						<p> Upload Audio Clip</p>
+						<p class = "text-danger"> Upload Audio Clip</p>
 						<input class ="choose" fileread="newShow.song" type="file" accept="audio/*">
 					</div>
 					<input ng-model="newShow.artist"  placeholder="Artist">
