--- a/public/html/tours.html
+++ b/public/html/tours.html
@@ -19,7 +19,7 @@
 					<p class = "citySelect"> Select A City</p>
 						<select class = "selector" ng-change= "findBands()" ng-model="search.city" > 
 							
-							<option value = "{{data.city}}" ng-repeat="data in shows">{{data.city}}</option>
+							<option value = "{{data.city}}" ng-repeat="data in shows">{{data.city}}, {{data.state}}</option>
 						</select>
 					</div>
 				</div>
@@ -30,7 +30,7 @@
 			<div>
 				<ul ng-show= 'search.city'>	
 		
-			<div ng-repeat="data in shows | filter:search.city">
+			<div class = "dataContainer" ng-repeat="data in shows | filter:search.city">
  			
 
 					<h1 ng-click="playAudio(data)">{{data.artist}}</h1>
