--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,10 +4,12 @@
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 		<link href='https://fonts.googleapis.com/css?family=Jura:400,500' rel='stylesheet' type='text/css'>
 		<link rel = "stylesheet" type ="text/css" href = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css">
-		<!-- <link rel = "stylesheet" type ="text/css" href = "https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/superhero/bootstrap.css"> -->
+		<link rel = "stylesheet" type ="text/css" href = "https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/superhero/bootstrap.css">
 		<link rel = "stylesheet" href = "/stylesheets/main.css"> 
 		<link rel ="stylesheet" href = "/stylesheets/animate.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js" type="text/javascript"></script>
+		<script src= "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js" type = "text/javascript"></script>
+		<script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.7/angular-filter.js" type= "text/javascript"></script>
+
 	<title>Welcome</title>
 </head>
 
