--- a/public/html/showInfo.html
+++ b/public/html/showInfo.html
@@ -7,6 +7,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Jura:400,500' rel='stylesheet' type='text/css'>
 		<link rel = "stylesheet" type ="text/css" href = "https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/superhero/bootstrap.css">
 		<script src= "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
+		<script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.7/angular-filter.js" type= "text/javascript"></script>
 		<link rel = "stylesheet" href = "/stylesheets/main.css"> 
 		<link rel ="stylesheet" href = "/stylesheets/animate.css">
 		</head>
