--- a/public/html/tours.html
+++ b/public/html/tours.html
@@ -6,6 +6,8 @@
 		<link href='https://fonts.googleapis.com/css?family=Jura:400,500' rel='stylesheet' type='text/css'>
 		<link rel = "stylesheet" type ="text/css" href = "https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/superhero/bootstrap.css">
 		<script src= "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
+		<script src= "https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.7/angular-filter.js"></script>
+
 		<link rel = "stylesheet" href = "/stylesheets/main.css"> 
 		<link rel ="stylesheet" href = "/stylesheets/animate.css">
 		</head>
@@ -19,7 +21,7 @@
 					<p class = "citySelect"> Select A City</p>
 						<select class = "selector" ng-change= "findBands()" ng-model="search.city" > 
 							
-							<option value = "{{data.city}}" ng-repeat="data in shows">{{data.city}}, {{data.state}}</option>
+							<option value = "{{data.city}}" ng-repeat="data in shows | unique: 'city'">{{data.city}}, {{data.state}}</option>
 						</select>
 					</div>
 				</div>
