--- a/public/html/login.html
+++ b/public/html/login.html
@@ -21,18 +21,18 @@
 
 
  <div>
-  <h3>Artist Login</h3>
+  <h3>User Login</h3>
   <form action="/auth/login" method="post">
-    <input type="text" name="username" placeholder="Username"/>
-    <input type="password" name="password" placeholder="Password"/>
-    <input type="submit"/>
+    <input class = 'userLogin' type="text" name="username" placeholder="Username"/>
+    <input class = 'userLogin' type="password" name="password" placeholder="Password"/>
+    <input class = 'userLogin' type="submit"/>
   </form>
   <h1>First time user? Register now!</h1>
   <form action="/auth/signup" method="post">
-    <input type="text" name="username" placeholder="Username"/>
-    <input type="email" name="email" placeholder="Email"/>
-    <input type="password" name="password" placeholder="Password"/>
-    <input type="submit"/>
+    <input class = 'userLogin' type="text" name="username" placeholder="Username"/>
+    <input class = 'userLogin' type="email" name="email" placeholder="Email"/>
+    <input class = 'userLogin' type="password" name="password" placeholder="Password"/>
+    <input class = 'userLogin' type="submit"/>
   </form>
 </div>
 <!-- <div>
