--- a/public/html/showInfo.html
+++ b/public/html/showInfo.html
@@ -33,6 +33,7 @@
 					</div>
 					<input class = 'userLogin' ng-model="newShow.artist"  placeholder="Artist">
 					<input class = 'userLogin' ng-model="newShow.venue" placeholder="Venue"> 
+					<input class = 'userLogin' ng-model="newShow.date" placeholder="Date"> 
 					<input class = 'userLogin' ng-model="newShow.city"  placeholder="City">
 					<input class = 'userLogin' ng-model="newShow.state"  placeholder="State">
 					<input class = 'userLogin' type="submit">
