--- a/public/html/index.html
+++ b/public/html/index.html
@@ -33,7 +33,7 @@
 	<div class = "main-content">
 						<div class = "container">
 						<h1 class = "header"> Welcome!</h1>
-						<p class = "sammy"><h4> This site is intended to help musicians connect with potential fans through concert promotion.</h4></p>
+						<!-- <p class = "sammy"><h4> This site is intended to help musicians directly connect with potential fans through concert promotion.</h4></p>  -->
 						
 						</div>
 					</div>
