--- a/public/html/index.html
+++ b/public/html/index.html
@@ -53,7 +53,7 @@
 
 								<div class = "col-md-4">
 									<h2> About</h2>
-									<p> Obligatory about page. Learn more about our concept.</p>
+									<p> This is the obligatory about page for this site. Learn more about our concept.</p>
 									
 									<p> <a href="/about" class="btn btn-info btn-lg">About</a></p>
 								</div>
